syntax="proto3";
package order;
option go_package="github.com/meles-z/go-grpc-microsevice/order";

message User{
    string name=1;
    string email =2;
    string address=3;
    string phone=4;
    string password=5;
    repeated string order_ids = 7; 
}

message CreateUserRequest{
    User user=1;
}
message CreateUserResponse{
    User user=1;
}
message GetAllUsersRequest{

}
message GetAllUsersResponse{
    repeated User user=1;
}
message GetUserByIdRequest{
    string id=1;
}
message GetUserByIdResponse{
    User user=1;
}
message UpdateUserRequest{
    User user=1;
}
message UpdateUserResponse{
    User user =1;
}
message DeleteUserRequest{
    string id =1;
}
message DeleteUserResponse{
    bool success=1;
}

service UserService{
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
    rpc GetAllUsers(GetAllUsersRequest) returns (GetAllUsersResponse);
    rpc GetUserById(GetUserByIdRequest) returns (GetUserByIdResponse);
    rpc UpdateUser(UpdateUserRequest) returns( UpdateUserResponse);
    rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
}
